@@ -22,12 +22,11 @@ scene.materials.inner_mat.kt = 0.69 0.78 1.0
 #scene.materials.inner_mat.exteriorior = 1.0
 #scene.materials.inner_mat.interiorior = 1.45
 scene.materials.inner_mat.volume.interior = volglass
-scene.materials.inner_mat.samples = 3
 ##
 scene.materials.mat1.type = matte
 scene.materials.mat1.kd = 0.65 0.0 0.0
 scene.materials.mat2.type = mirror
-scene.materials.mat2.kd = 0.0 0.0 0.8
+scene.materials.mat2.kr = 0.0 0.0 0.8
 scene.materials.mat2.bumptex = scaled_bumpmap
 scene.materials.shell.type = mix
 scene.materials.shell.material1 = mat1
